--- a/pympress/share/locale/cs/pympress.po
+++ b/pympress/share/locale/cs/pympress.po
@@ -4,14 +4,14 @@ msgstr ""
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2018-08-30 18:10+0200\n"
+"Last-Translator: Jaroslav Svoboda <multi.flexi@seznam.cz>\n"
 "Language-Team: \n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.6\n"
-"Last-Translator: Jaroslav Svoboda <multi.flexi@seznam.cz>\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"Language: cs\n"
 
 msgid "(and optionally seconds)"
 msgstr "(a případně sekundy)"
@@ -34,12 +34,8 @@ msgstr "Velká tlačítka"
 msgid "Clock"
 msgstr "Hodiny"
 
-msgid ""
-"Content and presenter window must not be on the same monitor if you start "
-"full screen!"
-msgstr ""
-"Obsah a okno s prezentací musí být na stejném monitoru pokud zapnete "
-"zobrazení na celé obrazovce!"
+msgid "Content and presenter window must not be on the same monitor if you start full screen!"
+msgstr "Obsah a okno s prezentací musí být na stejném monitoru pokud zapnete zobrazení na celé obrazovce!"
 
 msgid "Content blanked"
 msgstr "Prázdno"
@@ -77,11 +73,11 @@ msgstr "Chyba při nahrávání ikony pro okno O programu"
 msgid "Error opening the file \"{}\""
 msgstr "Chyba při otevírání souboru \"{}\""
 
-msgid ""
-"Error: access denied when trying to access screen saver settings in registry!"
+msgid "Error: access denied when trying to access screen saver settings in registry!"
+msgstr "Chyba: přístup byl odepřen při pokusu o přístup k nastavení spořiče obrazovky v registru!"
+
+msgid "GtkImage gif player"
 msgstr ""
-"Chyba: přístup byl odepřen při pokusu o přístup k nastavení spořiče "
-"obrazovky v registru!"
 
 msgid "Highlight"
 msgstr "Zvýraznit"
@@ -92,6 +88,9 @@ msgstr "Neplatná úroveň logu \"{}\", vyzkoušejte jednu z těchto: {}"
 msgid "Invalid time (mm or mm:ss expected), got \"{}\""
 msgstr "Neplatný čas (vyžadován tvar mm nebo mm:ss), zadáno \"{}\""
 
+msgid "Media support uses {}."
+msgstr ""
+
 msgid "Next slide"
 msgstr "Další snímek"
 
@@ -101,20 +100,14 @@ msgstr "Pro tento odkaz nebyla definována žádná akce"
 msgid ""
 "No file selected!\n"
 "\n"
-"You can specify the PDF file to open on the command line if you don't want "
-"to use the \"Open File\" dialog."
+"You can specify the PDF file to open on the command line if you don't want to use the \"Open File\" dialog."
 msgstr ""
 "Žádný soubor není vybrán!\n"
 "\n"
-"Pokud nechcete použít dialog \"Otevřít soubor\", specifikujte PDF soubor v "
-"příkazové řádce."
+"Pokud nechcete použít dialog \"Otevřít soubor\", specifikujte PDF soubor v příkazové řádce."
 
-msgid ""
-"Not starting content or presenter window full screen because there is only "
-"one monitor"
-msgstr ""
-"Okno s obsahem nebo prezentací nebylo spuštěno na celou obrazovku, protože "
-"je dostupný pouze jeden monitor"
+msgid "Not starting content or presenter window full screen because there is only one monitor"
+msgstr "Okno s obsahem nebo prezentací nebylo spuštěno na celou obrazovku, protože je dostupný pouze jeden monitor"
 
 msgid "Notes"
 msgstr "Poznámky"
@@ -218,12 +211,8 @@ msgstr "Podpora videa přes VLC je vypnuta."
 msgid "Video support using VLC is enabled."
 msgstr "Podpora videa přes VLC je zapnuta."
 
-msgid ""
-"Warning: Content and presenter window must not be on the same monitor if you "
-"start full screen!"
-msgstr ""
-"Upozornění: Okno obsahu a prezentace nesmí být na stejném monitoru při "
-"zobrazení na celou obrazovku!"
+msgid "Warning: Content and presenter window must not be on the same monitor if you start full screen!"
+msgstr "Upozornění: Okno obsahu a prezentace nesmí být na stejném monitoru při zobrazení na celou obrazovku!"
 
 msgid "Warning: Could not disable DPMS screen blanking: got status "
 msgstr "Upozornění: Nelze vypnout DPMS vyprázdnění obrazovky: stav "
@@ -321,20 +310,20 @@ msgstr "_Počáteční nastavení"
 msgid "_Swap screens"
 msgstr "_Prohodit obrazovky"
 
-msgid "access denied when trying to access screen saver settings in registry!"
+msgid "_Undo zoom"
 msgstr ""
-"přístup byl odepřen při pokusu o přístup k nastavení spořiče obrazovky v "
-"registru!"
+
+msgid "_Zoom in"
+msgstr ""
+
+msgid "access denied when trying to access screen saver settings in registry!"
+msgstr "přístup byl odepřen při pokusu o přístup k nastavení spořiče obrazovky v registru!"
 
 msgid "no action defined for this link!"
 msgstr "žádná akce není definována pro tento odkaz!"
 
-msgid ""
-"pympress is a little PDF reader written in Python using Poppler for PDF "
-"rendering and GTK for the GUI.\n"
-msgstr ""
-"pympress je malý prohlížeč PDF napsaný v Pythonu používající Poppler k "
-"zobrazení PDF a GTK pro GUI.\n"
+msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
+msgstr "pympress je malý prohlížeč PDF napsaný v Pythonu používající Poppler k zobrazení PDF a GTK pro GUI.\n"
 
 msgid "video support is disabled"
 msgstr "podpora videa je vypnuta"
