--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -9,11 +9,11 @@ msgstr ""
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2018-02-09 17:14+0100\n"
 "Last-Translator: FriedrichFroebel\n"
+"Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 msgid "(and optionally seconds)"
@@ -79,6 +79,9 @@ msgstr "Die Datei \"{}\" konnte nicht geöffnet werden"
 msgid "Error: access denied when trying to access screen saver settings in registry!"
 msgstr "Fehler: Zugriff auf die Bildschirmschoner-Einstellungen der Registry nicht erlaubt!"
 
+msgid "GtkImage gif player"
+msgstr "GtkImage gif Spieler"
+
 msgid "Highlight"
 msgstr "Hervorheben"
 
@@ -87,6 +90,9 @@ msgstr "Ungültiges Log-Level \"{}\", versuche eines aus {}"
 
 msgid "Invalid time (mm or mm:ss expected), got \"{}\""
 msgstr "Ungültige Zeit (mm oder mm:ss erwartet), habe \"{}\""
+
+msgid "Media support uses {}."
+msgstr "Videounterstützung verwendet {}"
 
 msgid "Next slide"
 msgstr "Nächste Folie"
@@ -306,6 +312,12 @@ msgstr "_Startkonfiguration"
 
 msgid "_Swap screens"
 msgstr "Bildschirme _tauschen"
+
+msgid "_Undo zoom"
+msgstr "Z_urücksetzen Zoom"
+
+msgid "_Zoom in"
+msgstr "Hinein_zoomen"
 
 msgid "access denied when trying to access screen saver settings in registry!"
 msgstr "Zugriff auf die Bildschirmschoner-Einstellungen der Registry nicht erlaubt!"
